# mbot_python

./: .gitignore  LICENSE  README.md  ble_probe.py  dance_party_live.py  mbot2_control.py  mbot2_live.py  pyproject.toml
docs/: commands.md
examples/: dance_party.py  drive_square.py  hello.py  keyboard_drive.py  new.py  read_sensors.py
mbot2/: __init__.py  connection.py  protocol.py  robot.py
onboard/: dance_party.py
tools/: explore_ble.py  introspect.py  scan.ps1
